# Generated by Django 6.0.6 on 2026-08-04 00:38

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('user_id', models.AutoField(primary_key=True, serialize=False)),
                ('first_name', models.CharField(max_length=50)),
                ('last_name', models.CharField(max_length=50)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('phone_number', models.CharField(max_length=15, unique=True)),
                ('is_verified', models.BooleanField(default=False)),
                ('is_staff', models.BooleanField(default=False)),
                ('is_active', models.BooleanField(default=True)),
                ('date_joined', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Inventory',
            fields=[
                ('inventory_id', models.AutoField(primary_key=True, serialize=False)),
                ('batch_number', models.CharField(editable=False, max_length=50, unique=True)),
                ('blood_group', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('quantity_units', models.PositiveIntegerField(default=1)),
                ('unit_volume_ml', models.PositiveIntegerField(default=450, help_text='Volume of a single blood unit (ml).')),
                ('donation_date', models.DateField()),
                ('expiry_date', models.DateField()),
                ('status', models.CharField(choices=[('AVAILABLE', 'Available'), ('RESERVED', 'Reserved'), ('EXPIRED', 'Expired'), ('DISCARDED', 'Discarded')], default='AVAILABLE', max_length=20)),
                ('notes', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'Inventory',
                'ordering': ['expiry_date'],
            },
        ),
        migrations.CreateModel(
            name='Location',
            fields=[
                ('location_id', models.AutoField(primary_key=True, serialize=False)),
                ('gps_code', models.CharField(max_length=20, unique=True)),
                ('region', models.CharField(max_length=100)),
                ('district', models.CharField(max_length=100)),
                ('city', models.CharField(max_length=100)),
                ('address_text', models.TextField()),
                ('latitude', models.DecimalField(blank=True, decimal_places=8, max_digits=10, null=True)),
                ('longitude', models.DecimalField(blank=True, decimal_places=8, max_digits=11, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Role',
            fields=[
                ('role_id', models.AutoField(primary_key=True, serialize=False)),
                ('role_name', models.CharField(max_length=30, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='InventoryTransaction',
            fields=[
                ('transaction_id', models.AutoField(primary_key=True, serialize=False)),
                ('transaction_type', models.CharField(choices=[('DONATION', 'Donation'), ('REQUEST', 'Blood Request'), ('TRANSFER_IN', 'Transfer In'), ('TRANSFER_OUT', 'Transfer Out'), ('ADJUSTMENT', 'Manual Adjustment'), ('EXPIRED', 'Expired')], max_length=20)),
                ('quantity_units', models.PositiveIntegerField()),
                ('reference_number', models.CharField(blank=True, max_length=100, null=True)),
                ('notes', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('inventory', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='transactions', to='vitanovaAPI.inventory')),
                ('performed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='inventory_transactions', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'Inventory_Transaction',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('notification_id', models.AutoField(primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=150)),
                ('message', models.TextField()),
                ('type', models.CharField(choices=[('SMS', 'SMS'), ('EMAIL', 'EMAIL'), ('PUSH', 'PUSH')], max_length=30)),
                ('status', models.CharField(choices=[('Unread', 'Unread'), ('Read', 'Read')], default='Unread', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'Notification',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Organisation',
            fields=[
                ('organisation_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=255, unique=True)),
                ('organisation_type', models.CharField(choices=[('hospital', 'Hospital'), ('blood_bank', 'Blood Bank')], max_length=20)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('phone_number', models.CharField(max_length=20, unique=True)),
                ('registration_number', models.CharField(max_length=100, unique=True)),
                ('description', models.TextField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('location', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='organisations', to='vitanovaAPI.location')),
            ],
        ),
        migrations.AddField(
            model_name='inventory',
            name='organisation',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='inventory', to='vitanovaAPI.organisation'),
        ),
        migrations.CreateModel(
            name='BloodRequest',
            fields=[
                ('request_id', models.AutoField(primary_key=True, serialize=False)),
                ('blood_group_needed', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('quantity_units', models.PositiveIntegerField()),
                ('urgency_level', models.CharField(choices=[('ROUTINE', 'Routine'), ('EMERGENCY', 'Emergency')], max_length=20)),
                ('request_status', models.CharField(choices=[('PENDING', 'Pending'), ('APPROVED', 'Approved'), ('COMPLETED', 'Completed'), ('REJECTED', 'Rejected')], default='PENDING', max_length=20)),
                ('request_time', models.DateTimeField(auto_now_add=True)),
                ('required_by_time', models.DateTimeField()),
                ('organisation', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='blood_requests', to='vitanovaAPI.organisation')),
            ],
        ),
        migrations.AddField(
            model_name='user',
            name='organisation',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='vitanovaAPI.organisation'),
        ),
        migrations.AddField(
            model_name='user',
            name='role',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='vitanovaAPI.role'),
        ),
        migrations.CreateModel(
            name='Donor',
            fields=[
                ('user', models.OneToOneField(db_column='user_id', on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
                ('blood_group', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('date_of_birth', models.DateField()),
                ('gender', models.CharField(max_length=15)),
                ('last_donation_date', models.DateField(blank=True, null=True)),
                ('availability_status', models.CharField(choices=[('ACTIVE', 'Active'), ('INACTIVE', 'Inactive'), ('UNAVAILABLE', 'Unavailable')], default='ACTIVE', max_length=20)),
                ('location', models.ForeignKey(db_column='location_id', on_delete=django.db.models.deletion.PROTECT, to='vitanovaAPI.location')),
            ],
            options={
                'db_table': 'Donor',
            },
        ),
        migrations.CreateModel(
            name='BloodDonation',
            fields=[
                ('donation_id', models.AutoField(primary_key=True, serialize=False)),
                ('blood_group', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('quantity_units', models.PositiveIntegerField(default=1)),
                ('quantity_ml', models.PositiveIntegerField(default=450)),
                ('donation_date', models.DateField()),
                ('expiry_date', models.DateField()),
                ('health_check_status', models.CharField(choices=[('PENDING', 'Pending'), ('PASSED', 'Passed'), ('FAILED', 'Failed')], default='PENDING', max_length=20)),
                ('notes', models.TextField(blank=True, null=True)),
                ('organisation', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='blood_donations', to='vitanovaAPI.organisation')),
                ('donor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='blood_donations', to='vitanovaAPI.donor')),
            ],
        ),
        migrations.CreateModel(
            name='Patient',
            fields=[
                ('user', models.OneToOneField(db_column='user_id', on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
                ('blood_group', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('date_of_birth', models.DateField()),
                ('gender', models.CharField(max_length=15)),
                ('emergency_contact', models.CharField(blank=True, max_length=15, null=True)),
                ('medical_notes', models.TextField(blank=True, null=True)),
                ('location', models.ForeignKey(db_column='location_id', on_delete=django.db.models.deletion.PROTECT, to='vitanovaAPI.location')),
            ],
            options={
                'db_table': 'Patient',
            },
        ),
        migrations.CreateModel(
            name='OrganisationPartner',
            fields=[
                ('partnership_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('organisation', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='partners', to='vitanovaAPI.organisation')),
                ('partner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='partnered_with', to='vitanovaAPI.organisation')),
            ],
            options={
                'constraints': [models.UniqueConstraint(fields=('organisation', 'partner'), name='unique_organisation_partner'), models.CheckConstraint(condition=models.Q(('organisation', models.F('partner')), _negated=True), name='organisation_cannot_partner_with_self')],
            },
        ),
    ]
