# Generated by Django 6.0.6 on 2026-08-04 15:32

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('vitanovaAPI', '0002_auto_20260804_0039'),
    ]

    operations = [
        migrations.CreateModel(
            name='BloodIssue',
            fields=[
                ('issue_id', models.AutoField(primary_key=True, serialize=False)),
                ('quantity_units', models.PositiveIntegerField()),
                ('issue_date', models.DateTimeField(auto_now_add=True)),
                ('notes', models.TextField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='InventoryReservation',
            fields=[
                ('reservation_id', models.AutoField(primary_key=True, serialize=False)),
                ('quantity_units', models.PositiveIntegerField()),
                ('status', models.CharField(choices=[('ACTIVE', 'Active'), ('COMPLETED', 'Completed'), ('CANCELLED', 'Cancelled'), ('EXPIRED', 'Expired')], default='ACTIVE', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('expires_at', models.DateTimeField(blank=True, null=True)),
                ('notes', models.TextField(blank=True, null=True)),
            ],
        ),
        migrations.AlterField(
            model_name='bloodrequest',
            name='request_status',
            field=models.CharField(choices=[('PENDING', 'Pending'), ('RESERVED', 'Reserved'), ('COMPLETED', 'Completed'), ('CANCELLED', 'Cancelled')], default='PENDING', max_length=20),
        ),
        migrations.AlterField(
            model_name='inventory',
            name='status',
            field=models.CharField(choices=[('AVAILABLE', 'Available'), ('EXPIRED', 'Expired'), ('DISCARDED', 'Discarded')], default='AVAILABLE', max_length=20),
        ),
        migrations.AlterField(
            model_name='inventory',
            name='unit_volume_ml',
            field=models.PositiveIntegerField(default=450),
        ),
        migrations.AlterField(
            model_name='inventorytransaction',
            name='transaction_type',
            field=models.CharField(choices=[('DONATION', 'Donation'), ('RESERVATION', 'Reservation'), ('RESERVATION_RELEASE', 'Reservation Release'), ('REQUEST', 'Blood Request'), ('TRANSFER_IN', 'Transfer In'), ('TRANSFER_OUT', 'Transfer Out'), ('ADJUSTMENT', 'Manual Adjustment'), ('EXPIRED', 'Expired')], max_length=30),
        ),
        migrations.AddIndex(
            model_name='inventory',
            index=models.Index(fields=['organisation', 'blood_group', 'status', 'expiry_date'], name='Inventory_organis_2f3fc3_idx'),
        ),
        migrations.AddField(
            model_name='bloodissue',
            name='blood_request',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='issues', to='vitanovaAPI.bloodrequest'),
        ),
        migrations.AddField(
            model_name='bloodissue',
            name='inventory',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='blood_issues', to='vitanovaAPI.inventory'),
        ),
        migrations.AddField(
            model_name='bloodissue',
            name='issued_by',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='issued_blood', to=settings.AUTH_USER_MODEL),
        ),
        migrations.AddField(
            model_name='bloodissue',
            name='organisation',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='blood_issues', to='vitanovaAPI.organisation'),
        ),
        migrations.AddField(
            model_name='inventoryreservation',
            name='blood_request',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reservations', to='vitanovaAPI.bloodrequest'),
        ),
        migrations.AddField(
            model_name='inventoryreservation',
            name='inventory',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='reservations', to='vitanovaAPI.inventory'),
        ),
    ]
